Upgrade to JDK 11 EA API