@@ -1,5 +1,5 @@
 module wisp.websocket.echo {
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
     requires wisp.websocket;
 
     provides wisp.websocket.api.WebSocketService with wisp.websocket.echo.EchoWebSocketService;
